--- a/webupdownapp/templates/base.html
+++ b/webupdownapp/templates/base.html
@@ -54,7 +54,7 @@
                         {% if user.is_authenticated %}
                             <li><a href="/logout/">Logout</a></li>
 {#                            <li><a href="{% url 'account_list' %}" class="p-r-none">Accounts</a></li>#}
-			                <li><a href="{% url 'rssrecords_list' %}" class="p-r-none">RSS Feed URLs</a></li>
+{#			                <li><a href="{% url 'rssrecords_list' %}" class="p-r-none">RSS Feed URLs</a></li>#}
 					        <li><a href="{% url 'rssrecords_summary' %}" class="p-r-none">URL Summary</a></li>
                         {% else %}
                             <li><a href="/login/">Login</a></li>
