returned db to origin state before adding forms for uploading text files

--- a/webupdownapp/templates/base.html
+++ b/webupdownapp/templates/base.html
@@ -56,6 +56,7 @@
 {#                            <li><a href="{% url 'account_list' %}" class="p-r-none">Accounts</a></li>#}
 {#			                <li><a href="{% url 'rssrecords_list' %}" class="p-r-none">RSS Feed URLs</a></li>#}
 					        <li><a href="{% url 'rssrecords_summary' %}" class="p-r-none">URL Summary</a></li>
+                            <li><a href="{% url 'rssrecord_upload' %}" class="p-r-none">Upload URLs</a></li>
                         {% else %}
                             <li><a href="/login/">Login</a></li>
                             <li><a href="{% url 'sub_new' %}" class="p-r-none">Sign Up</a></li>
