--- a/webupdownapp/templates/rssrecords/rssrecord_item_form.html
+++ b/webupdownapp/templates/rssrecords/rssrecord_item_form.html
@@ -5,6 +5,7 @@
     {% csrf_token %}
     <div class="row">
         <div class="col-md-9">
+            <div><h2>Enter New Url Below</h2></div>
             <p>{{ form.url }}</p>
             <span>{{ form.url.errors }}</span>
         </div>
