upload working but only saves last url in txt file

--- a/webupdownapp/templates/rssrecords/rssrecord_upload_form.html
+++ b/webupdownapp/templates/rssrecords/rssrecord_upload_form.html
@@ -8,9 +8,9 @@
         <div class="col-md-9">
             <div><h2>Select File To Upload</h2></div>
             <p></p>
-            <p>{{ form.csvfile.label }} {{ form.csvfile.help_text }}</p>
+            <p>{{ form2.uploadfile.label }}: {{ form2.uploadfile.help_text }}</p>
 {#            <p>{{ form.csvfile.errors }}</p>#}
-            <p>{{ form.csvfile }}</p>
+            <p>{{ form2.uploadfile }}</p>
         </div>
 
     </div>
