fixed logic with Twitter and Google Plus update tasks

--- a/webupdownapp/templates/rssrecords/rssdown_list.html
+++ b/webupdownapp/templates/rssrecords/rssdown_list.html
@@ -19,7 +19,7 @@
                         <a href="{{ rssrecord.get_absolute_url }}"><h4 class="al-name">{{ rssrecord.name }}</h4></a>
                         <span class="al-created">First uploaded on {{ rssrecord.created_on }}</span>
                         <br>
-                        <span class="al-created">Last checked on {{ rssrecord.last_checked }}</span>
+                        <span class="al-created">Last checked on {{ rssrecord.last_checked }} GTM</span>
                         <br>
                         <span class="al-created">Site was: {{ rssrecord.upordown }}</span>
                         <br>
