--- a/webupdownapp/templates/rssrecords/rssrecord_item_view.html
+++ b/webupdownapp/templates/rssrecords/rssrecord_item_view.html
@@ -17,7 +17,7 @@
         <h5>First uploaded on</h5>
         <p>{{ rssrecord.created_on }}</p>
         <h5>Last checked on</h5>
-        <p>{{ rssrecord.last_checked }}</p>
+        <p>{{ rssrecord.last_checked }} GMT</p>
         <h5>Site status was:</h5>
         <p>{{ rssrecord.upordown }}</p>
     </div>
