commented out single URL additions on rssrecords templates

--- a/webupdownapp/templates/rssrecords/rssrecord_list.html
+++ b/webupdownapp/templates/rssrecords/rssrecord_list.html
@@ -8,10 +8,10 @@
             <div id="al-control">
                 <h3 class="ad-mh">RSS Feed URL List
                     {# Add RSS Record Link #}
-                    <span class="pull-right">
-                        <a href="{% url 'rssrecord_new' %}"
-                            class="btn btn-link p-r-none">+ Add New RSS URL</a>
-                    </span>
+{#                    <span class="pull-right">#}
+{#                        <a href="{% url 'rssrecord_new' %}"#}
+{#                            class="btn btn-link p-r-none">+ Add New RSS URL</a>#}
+{#                    </span>#}
                 </h3>
                 RSS Record Search Form
                 <form action="{% url 'account_list' %}" method="get">
