added DB updates for all feed and url updates as well as updated template

--- a/webupdownapp/templates/rssrecords/rssrecord_list.html
+++ b/webupdownapp/templates/rssrecords/rssrecord_list.html
@@ -37,6 +37,8 @@
                         <br>
                         <span class="al-created">Site was: {{ rssrecord.upordown }}</span>
                         <br>
+                        <span class="al-created">Site updated: {{ rssrecord.dayssinceupdate }} days ago</span>
+                        <br>
 
                     </li>
                 {% endfor %}
